Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,32 +38,106 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>Welcome to GitHub Pages.</h3>
+        <h1>Gatekeeper 0.1.1-dev</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Gatekeeper is a multi-provider authentication abstraction layer for PHP.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p><a href="http://travis-ci.org/kenkataiwa/gatekeeper"><img src="https://api.travis-ci.org/kenkataiwa/gatekeeper.png?branch=master" alt="Build Status"></a></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>Getting Started</h2>
 
-<h3>Designer Templates</h3>
+<p>(Documentation is forthcoming.)</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h2>Available providers</h2>
 
-<h3>Rather Drive Stick?</h3>
+<table>
+<tr>
+<th>Providers</th>
+    <th>Status</th>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://facebook.com" alt="Facebook">  
+        <a href="http://facebook.com"><strong>Facebook</strong></a>
+    </td>
+    <td>Almost</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://www.foursquare.com" alt="Foursquare" width="16">  
+        <a href="http://www.foursquare.com">Foursquare</a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://google.com" alt="Google" width="16">  
+        <a href="http://google.com"><strong>Google</strong></a>
+    </td>
+    <td>Partial</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://instagram.com" alt="Instagram">  
+        <a href="http://instagram.com">Instagram</a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://linkedin.com" alt="LinkedIn">  
+        <a href="http://linkedin.com"><strong>LinkedIn</strong></a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://live.com" alt="Live Connect">  
+        <a href="http://live.com">(Windows) Live</a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://openid.net" alt="OpenID">  
+        <a href="http://openid.net">OpenID</a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://twitter.com" alt="Twitter" width="16">  
+        <a href="http://twitter.com"><strong>Twitter</strong></a>
+</td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+<td>
+<img src="http://g.etfv.co/http://developer.yahoo.com" alt="Yahoo!" width="16">  
+        <a href="http://developer.yahoo.com">Yahoo!</a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+</table><h2>Versioning</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>For transparency and insight into our release cycle, releases will be numbered with the follow format:</p>
 
-<h3>Authors and Contributors</h3>
+<p><code>&lt;major&gt;.&lt;minor&gt;.&lt;patch&gt;</code></p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>And constructed with the following guidelines:</p>
 
-<h3>Support or Contact</h3>
+<ul>
+<li>Breaking backwards compatibility bumps the major</li>
+<li>New additions without breaking backwards compatibility bumps the minor</li>
+<li>Bug fixes and misc changes bump the patch</li>
+</ul><p>For more information on semantic versioning, please visit <a href="http://semver.org/">http://semver.org/</a>.</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h2>Authors</h2>
+
+<ul>
+<li>
+<strong>Kenneth Kataiwa</strong> (<a href="https://twitter.com/kenkataiwa">Twitter</a> / <a href="https://github.com/kenkataiwa">GitHub</a>)</li>
+</ul>
       </section>
 
     </div>
