Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,20 +35,24 @@
           <p>Gatekeeper is a multi-provider authentication abstraction layer for PHP</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/kenkataiwa">kenkataiwa</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h1>Gatekeeper 0.1.1-dev</h1>
+        <h1>
+<a name="gatekeeper-015-dev" class="anchor" href="#gatekeeper-015-dev"><span class="octicon octicon-link"></span></a>Gatekeeper 0.1.5-dev</h1>
 
 <p>Gatekeeper is a multi-provider authentication abstraction layer for PHP.</p>
 
-<p><a href="http://travis-ci.org/kenkataiwa/gatekeeper"><img src="https://api.travis-ci.org/kenkataiwa/gatekeeper.png?branch=master" alt="Build Status"></a></p>
+<p><a href="http://travis-ci.org/kenkataiwa/gatekeeper"><img src="https://api.travis-ci.org/kenkataiwa/gatekeeper.png?branch=master" alt="Build Status"></a>
+<a href="http://stillmaintained.com/kenkataiwa/gatekeeper"><img src="http://stillmaintained.com/kenkataiwa/gatekeeper.png" alt="project status"></a></p>
 
-<h2>Getting Started</h2>
+<h2>
+<a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h2>
 
 <p>(Documentation is forthcoming.)</p>
 
-<h2>Available providers</h2>
+<h2>
+<a name="available-providers" class="anchor" href="#available-providers"><span class="octicon octicon-link"></span></a>Available providers</h2>
 
 <table>
 <tr>
@@ -57,10 +61,10 @@
 </tr>
 <tr>
 <td>
-<img src="http://g.etfv.co/http://facebook.com" alt="Facebook">  
+<img src="http://g.etfv.co/http://facebook.com" alt="Facebook" width="16">  
         <a href="http://facebook.com"><strong>Facebook</strong></a>
     </td>
-    <td>Almost</td>
+    <td>Complete</td>
 </tr>
 <tr>
 <td>
@@ -71,35 +75,35 @@
 </tr>
 <tr>
 <td>
-<img src="http://g.etfv.co/http://google.com" alt="Google" width="16">  
+<img src="http://g.etfv.co/http://plus.google.com" alt="Google" width="16">  
         <a href="http://google.com"><strong>Google</strong></a>
     </td>
-    <td>Partial</td>
+    <td>Complete</td>
 </tr>
 <tr>
 <td>
-<img src="http://g.etfv.co/http://instagram.com" alt="Instagram">  
+<img src="http://g.etfv.co/http://instagram.com" alt="Instagram" width="16">  
         <a href="http://instagram.com">Instagram</a>
     </td>
     <td>Incomplete</td>
 </tr>
 <tr>
 <td>
-<img src="http://g.etfv.co/http://linkedin.com" alt="LinkedIn">  
+<img src="http://g.etfv.co/http://linkedin.com" alt="LinkedIn" width="16">  
         <a href="http://linkedin.com"><strong>LinkedIn</strong></a>
     </td>
     <td>Incomplete</td>
 </tr>
 <tr>
 <td>
-<img src="http://g.etfv.co/http://live.com" alt="Live Connect">  
+<img src="http://g.etfv.co/http://microsoft.com" alt="Live Connect" width="16">  
         <a href="http://live.com">(Windows) Live</a>
     </td>
     <td>Incomplete</td>
 </tr>
 <tr>
 <td>
-<img src="http://g.etfv.co/http://openid.net" alt="OpenID">  
+<img src="http://g.etfv.co/http://openid.net" alt="OpenID" width="16">  
         <a href="http://openid.net">OpenID</a>
     </td>
     <td>Incomplete</td>
@@ -109,7 +113,7 @@
 <img src="http://g.etfv.co/http://twitter.com" alt="Twitter" width="16">  
         <a href="http://twitter.com"><strong>Twitter</strong></a>
 </td>
-    <td>Incomplete</td>
+    <td>Complete</td>
 </tr>
 <tr>
 <td>
@@ -118,7 +122,8 @@
     </td>
     <td>Incomplete</td>
 </tr>
-</table><h2>Versioning</h2>
+</table><h2>
+<a name="versioning" class="anchor" href="#versioning"><span class="octicon octicon-link"></span></a>Versioning</h2>
 
 <p>For transparency and insight into our release cycle, releases will be numbered with the follow format:</p>
 
@@ -132,7 +137,8 @@
 <li>Bug fixes and misc changes bump the patch</li>
 </ul><p>For more information on semantic versioning, please visit <a href="http://semver.org/">http://semver.org/</a>.</p>
 
-<h2>Authors</h2>
+<h2>
+<a name="authors" class="anchor" href="#authors"><span class="octicon octicon-link"></span></a>Authors</h2>
 
 <ul>
 <li>
