Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Gatekeeper by kenkataiwa</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
@@ -61,57 +61,57 @@
 </tr>
 <tr>
     <td>
-<img src="http://g.etfv.co/http://plus.google.com" alt="Google" width="16">  
-        <a href="http://google.com"><strong>Google</strong></a>
+<img src="http://www.google.com/s2/favicons?domain_url=https://www.google.com" alt="Google" width="16">  
+        <a target="_blank" href="http://google.com"><strong>Google</strong></a>
     </td>
     <td>Complete</td>
 </tr>
 <tr>
     <td>
-<img src="http://g.etfv.co/http://facebook.com" alt="Facebook" width="16">  
-        <a href="http://facebook.com"><strong>Facebook</strong></a>
+<img src="http://www.google.com/s2/favicons?domain_url=https://www.facebook.com" alt="Facebook" width="16">  
+        <a target="_blank" href="http://facebook.com"><strong>Facebook</strong></a>
     </td>
     <td>Complete</td>
 </tr>
 <tr>
     <td>
-<img src="http://g.etfv.co/http://twitter.com" alt="Twitter" width="16">  
-        <a href="http://twitter.com"><strong>Twitter</strong></a>
+<img src="http://www.google.com/s2/favicons?domain_url=https://twitter.com" alt="Twitter" width="16">  
+        <a target="_blank" href="http://twitter.com"><strong>Twitter</strong></a>
 </td>
     <td>Complete</td>
 </tr>
 <tr>
     <td>
-<img src="http://g.etfv.co/http://instagram.com" alt="Instagram" width="16">  
-        <a href="http://instagram.com">Instagram</a>
-    </td>
-    <td>Incomplete</td>
-</tr>
-<tr>
-    <td>
-<img src="http://g.etfv.co/http://linkedin.com" alt="LinkedIn" width="16">  
-        <a href="http://linkedin.com"><strong>LinkedIn</strong></a>
-    </td>
-    <td>Incomplete</td>
-</tr>
-<tr>
-    <td>
-<img src="http://g.etfv.co/http://microsoft.com" alt="Live Connect" width="16">  
-        <a href="http://live.com">(Windows) Live</a>
+<img src="http://www.google.com/s2/favicons?domain_url=https://www.microsoft.com" alt="Live Connect" width="16">  
+        <a target="_blank" href="http://live.com">(Microsoft) Live Connect</a>
     </td>
     <td>Complete</td>
 </tr>
 <tr>
     <td>
-<img src="http://g.etfv.co/http://openid.net" alt="OpenID" width="16">  
-        <a href="http://openid.net">OpenID</a>
+<img src="http://www.google.com/s2/favicons?domain_url=https://instagram.com" alt="Instagram" width="16">  
+        <a target="_blank" href="http://instagram.com">Instagram</a>
     </td>
     <td>Incomplete</td>
 </tr>
 <tr>
     <td>
-<img src="http://g.etfv.co/http://developer.yahoo.com" alt="Yahoo!" width="16">  
-        <a href="http://developer.yahoo.com">Yahoo!</a>
+<img src="http://www.google.com/s2/favicons?domain_url=https://linkedin.com" alt="LinkedIn" width="16">  
+        <a target="_blank" href="http://linkedin.com"><strong>LinkedIn</strong></a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+    <td>
+<img src="http://www.google.com/s2/favicons?domain_url=http://openid.net" alt="OpenID" width="16">  
+        <a target="_blank" href="http://openid.net">OpenID</a>
+    </td>
+    <td>Incomplete</td>
+</tr>
+<tr>
+    <td>
+<img src="https://s.yimg.com/rz/l/favicon.ico" alt="Yahoo!" width="16">  
+        <a target="_blank" href="http://developer.yahoo.com">Yahoo!</a>
     </td>
     <td>Incomplete</td>
 </tr>
