--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
         </div>
 
         <h1>
-<a id="gatekeeper-015-dev" class="anchor" href="#gatekeeper-015-dev" aria-hidden="true"><span class="octicon octicon-link"></span></a>Gatekeeper 0.1.5-dev</h1>
+<a id="gatekeeper-015" class="anchor" href="#gatekeeper-015" aria-hidden="true"><span class="octicon octicon-link"></span></a>Gatekeeper 0.1.5</h1>
 
 <p>Gatekeeper is a multi-provider authentication abstraction layer for PHP.</p>
 
-<p><a href="http://travis-ci.org/kenkataiwa/gatekeeper"><img src="https://api.travis-ci.org/kenkataiwa/gatekeeper.png?branch=master" alt="Build Status"></a>
-<a href="http://stillmaintained.com/kenkataiwa/gatekeeper"><img src="http://stillmaintained.com/kenkataiwa/gatekeeper.png" alt="project status"></a></p>
+<p><a href="http://travis-ci.org/kenkataiwa/gatekeeper"><img src="https://api.travis-ci.org/kenkataiwa/gatekeeper.png?branch=master" alt="Build Status"></a></p>
 
 <h2>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h2>
@@ -83,7 +82,7 @@
 <tr>
     <td>
 <img src="http://www.google.com/s2/favicons?domain_url=https://www.microsoft.com" alt="Live Connect" width="16">  
-        <a target="_blank" href="http://live.com">(Microsoft) Live Connect</a>
+        <a target="_blank" href="http://live.com"><strong>(Microsoft) Live Connect</strong></a>
     </td>
     <td>Complete</td>
 </tr>
@@ -97,7 +96,7 @@
 <tr>
     <td>
 <img src="http://www.google.com/s2/favicons?domain_url=https://linkedin.com" alt="LinkedIn" width="16">  
-        <a target="_blank" href="http://linkedin.com"><strong>LinkedIn</strong></a>
+        <a target="_blank" href="http://linkedin.com">LinkedIn</a>
     </td>
     <td>Incomplete</td>
 </tr>
@@ -146,6 +145,16 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-40351771-5");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
